2012-03-09  David S. Miller  <davem@davemloft.net>

	* include/math_private.h: New file.

2012-03-09  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/unix/sysv/linux/bits/socket_type.h: New file.
	* sysdeps/unix/sysv/linux/sparc/bits/socket_type.h: Likewise.
	* sysdeps/unix/sysv/linux/bits/socket.h: Get enum __socket_type
	from <bits/socket_type.h>.
	(enum __socket_type): Don't define here.
	* sysdeps/unix/sysv/linux/sparc/bits/socket.h: Remove.
	* sysdeps/unix/sysv/linux/Makefile (sysdep_headers): Add
	bits/socket_type.h.

	[BZ #13566]
	* libio/stdio.h (gets): Always declare for C++ up to C++11 without
	checking __USE_GNU.

	* Makerules ($(inst_includedir)/%.h): New rule.
	* stdio-common/Makefile (headers): Add bits/stdio_lim.h.
	(install-others): Remove variable setting.
	($(inst_includedir)/bits/stdio_lim.h): Remove rule.

2012-03-08  Richard Henderson  <rth@twiddle.net>

	* sysdeps/powerpc/fpu/math_private.h (__ieee754_sqrt): Convert
	from macro to inline function; merge with the
	!__LIBC_INTERNAL_MATH_INLINES version.
	(__ieee754_sqrtf): Likewise.

	* sysdeps/x86_64/fpu/math_private.h (__rint): Convert from macro
	to inline function.
	(__rintf, __floor, __floorf): Likewise.

	* sysdeps/x86_64/fpu/math_private.h (__ieee754_sqrt): Convert from
	macro to inline function.
	(__ieee754_sqrtf, __ieee754_sqrtl): Likewise.

	* sysdeps/ieee754/ldbl-opt/math_ldbl_opt.h: Include <math_private.h>,
	not <math/math_private.h>.

2012-03-08  David S. Miller  <davem@davemloft.net>

	* sysdeps/unix/sysv/linux/sparc/sparc64/get_clockfreq.c: Update
	copyright year.
	* sysdeps/unix/sysv/linux/sparc/sysdep.h: Likewise.

2012-03-08  Thomas Schwinge  <thomas@codesourcery.com>

	* resolv/gai_misc.c (handle_requests): Fix struct timespec
	normalization.
	* rt/tst-cpuclock2.c (test_nanosleep): Likewise.
	* sysdeps/pthread/aio_misc.c (handle_fildes_io): Likewise.

2012-03-08  Ulrich Drepper  <drepper@gmail.com>

	* stdio-common/tst-fphex.c: Various cleanups.  The macros cannot